fix(composer): name is invalid

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "TIGERB/easy-mipush",
+    "name": "tigerb/easy-mipush",
     "description": "easy to use mipush parallelly",
     "authors": [
         {
