--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
             "email": "tigerbcode@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0"
     },
@@ -15,5 +14,14 @@
         "psr-4": {
             "Mipush\\": "/"
         }
+    },
+    "keywords": [
+        "mipush",
+    ],
+    "homepage": "http://tiegrb.cn/",
+    "license": "Apache-2.0",
+    "minimum-stability": "stable",
+    "config": {
+        "preferred-install": "dist"
     }
 }
